[package]
name = "imex"
version = "0.1.0"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
description = """
imex is a library for merging multiple iterators into one
iterator, with the optional use of an IMEx, or
Iterator-Merging-Expression, for controlling the merge. imex will
also be a command line tool for merging files line-by-line in the
future.
"""
repository = "https://github.com/Trouv/imex"
readme = "README.md"
keywords = ["iterator", "merge", "regex", "pattern"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
