[package]
name = "imex"
version = "0.1.1"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
description = """
A library for merging multiple iterators into one iterator, with the optional
use of an IMEx, or Iterator-Merging-Expression, for controlling the merge.
"""
repository = "https://github.com/Trouv/imex"
readme = "README.md"
keywords = ["iterator", "merge", "regex", "pattern"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nom = "5.1.2"
