[package]
name = "imex"
version = "0.2.1"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
description = """
A library/CLI for merging multiple iterators/files into one, with the
optional use of an IMEx, or Iterator-Merging-Expression, for controlling the
merge.
"""
repository = "https://github.com/Trouv/imex"
readme = "README.md"
keywords = ["iterator", "merge", "regex", "pattern", "cli"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nom = "5.1.2"
clap = "2.33.3"
